--- a/carousels.html
+++ b/carousels.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>无线轮播</title>
+    <title>轮播</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
