--- a/carousels.html
+++ b/carousels.html
@@ -7,7 +7,7 @@
     <title>轮播</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+    <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
 
     <style type="text/css">
         .carousel {
